<resources>
    <string name="app_name">SprintProjectWeek6</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="civilizations">Civilization</string>
    <string name="structures">Structure</string>
    <string name="units">Unit</string>
    <string name="technologies">Technology</string>
    <string name="all">All</string>
    <string name="details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
