<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/list_activity_cl"
    android:layout_height="match_parent"
    tools:context=".ui.activities.list.ListActivity">

    <com.google.android.material.chip.ChipGroup android:id="@+id/listActivity_chipGroup"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:id="@+id/filterChip_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/filterChip_civilizations"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/civilizations"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/filterChip_structures"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/structures"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/filterChip_technologies"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technologies"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/filterChip_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"/>
    </com.google.android.material.chip.ChipGroup>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/listActvity_rv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listActivity_chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>